Added .github and goreleaser

--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,13 @@
 # Test binary, built with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output binary
 *.out
+/pingbot*
 
 # Sums
 MD5SUM
 SHA256SUM
 
 VERSION
+dist/
