feat: add ctx to backend ping, add cluster functional...
- Added ctx to backend ping
- Log changed Stderr to Stdout
- Added cluster functional
- Updated more files

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,6 +23,7 @@ archives:
       - LICENSE
       - .env.schema
       - config.schema.toml
+      - README.md
 
 checksum:
   name_template: 'md5_checksums.txt'
