feat(uptime): Add uptime to status and build date
- Moved type.go to types.go
- Added build date
- Removed linter from gitpod Dockerfile (now is in gitpod image)
- Added mongodb Database and Collection to config file (now isn't used [TODO])
- Added uptime to status

--- a/config.schema.toml
+++ b/config.schema.toml
@@ -13,3 +13,7 @@ check=2      # Check every two minutes
 [cluster]
 id=1         # Cluster ID
 node=1       # Node ID
+
+[mongodb]
+database="PingBot"
+collection="URL"
