--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,6 +15,7 @@ builds:
     ldflags:
       - -s -w
       - -X gitlab.com/gaming0skar123/go/pingbot/config.Version={{.RawVersion}}
+      - -X gitlab.com/gaming0skar123/go/pingbot/config.Build={{.Date}}
 
 archives:
   - format: tar.gz
