renovate: automerge, go mod tidy

--- a/renovate.json
+++ b/renovate.json
@@ -2,10 +2,8 @@
   "extends": [
     "config:base"
   ],
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["minor", "patch"],
-      "automerge": true
-    }
-  ]
+  "lockFileMaintenance": {
+    "enabled": true,
+    "automerge": true
+  }
 }
