--- a/renovate.json
+++ b/renovate.json
@@ -2,8 +2,6 @@
   "extends": [
     "config:base"
   ],
-  "lockFileMaintenance": {
-    "enabled": true,
-    "automerge": true
-  }
+  "automergeType": "pr",
+  "prCreation": "immediate"
 }
