--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,11 @@
     "config:base"
   ],
   "automergeType": "pr",
-  "prCreation": "immediate"
+  "prCreation": "immediate",
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    }
+  ]
 }
