feat(config): auto download schema config

--- a/config.schema.toml
+++ b/config.schema.toml
@@ -1,19 +1,19 @@
 [http]
-enabled=true # Enable Website
-port=8080    # Port to listen
+enabled=true       # Enable Website
+port=8080          # Port to listen
 
 [backend]
-enabled=true # Enable Backend
-ping=3       # Ping every three minutes
+enabled=true       # Enable Backend
+ping=3             # Ping every three minutes
 
 [autoupdate]
-enabled=true # Enable Auto Updater
-check=2      # Check every two minutes
+enabled=true       # Enable Auto Updater
+check=2            # Check every two minutes
 
 [cluster]
-id=1         # Cluster ID
-node=1       # Node ID
+id=1               # Cluster ID
+node=1             # Node ID
 
 [mongodb]
-database="PingBot"
-collection="URL"
+database="PingBot" # MongoDB Database Name
+collection="URL"   # MongoDB Collection Name
