--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,8 @@ jobs:
         with:
           go-version: 1.16
 
-      - uses: go-semantic-release/action@v1
+      - name: Semantic Release
+        uses: go-semantic-release/action@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
