feat: Add Cache URLs and Database config from toml file
- Added Cache URLs from Database
- and Database Name and Collection set from toml config file

--- a/config.schema.toml
+++ b/config.schema.toml
@@ -5,6 +5,7 @@ port=8080          # Port to listen
 [backend]
 enabled=true       # Enable Backend
 ping=3             # Ping every three minutes
+cache=5            # Get urls from db every five url pings
 
 [autoupdate]
 enabled=true       # Enable Auto Updater
