--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,6 @@
 name: Lint
 
-on:
-  pull_request:
-  push:
+on: [pull_request, push]
 
 jobs:
   golangci:
@@ -10,10 +8,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16
+          go-version: 1.17
+
       - name: GolangCi Lint
         uses: golangci/golangci-lint-action@v2
         with:
