--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,7 +23,8 @@ jobs:
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git commit -m "go mod tidy" -a
+          git add -A 
+          git diff-index --quiet HEAD || git commit -m "go mod tidy"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
