--- a/.github/workflows/go-mod-tidy.yml
+++ b/.github/workflows/go-mod-tidy.yml
@@ -1,6 +1,7 @@
-name: Push
+name: go mod tidy
 
-on: [push]
+on:
+  push:
 
 jobs:
   mod-tidy:
@@ -17,13 +18,13 @@ jobs:
         with:
           go-version: 1.17
 
-      - name: Tidy
+      - name: Mod Tidy
         run: go mod tidy
       - name: Commit
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add -A 
+          git add .
           git diff-index --quiet HEAD || git commit -m "go mod tidy"
 
       - name: Push changes
