--- a/.github/workflows/auto-fix.yml
+++ b/.github/workflows/auto-fix.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: gofmt
         run: |
-          go fmt ./..
+          go fmt ./...
           git add .
           git diff-index --quiet HEAD || git commit -m "gofmt"
 
