--- a/renovate.json
+++ b/renovate.json
@@ -2,11 +2,17 @@
   "extends": [
     "config:base"
   ],
+  "prHourlyLimit": 0,
   "automergeType": "pr",
   "prCreation": "immediate",
   "packageRules": [
     {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "matchUpdateTypes": [
+        "minor",
+        "patch",
+        "pin",
+        "digest"
+      ],
       "automerge": true
     }
   ]
