--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,10 +18,10 @@ builds:
       - -X gitlab.com/gaming0skar123/go/pingbot/config.Build={{.Date}}
 
 archives:
-  - format: tar.gz
+  - format: tar.xz
 
     files:
-      - .env.schema
+      - schema.env
       - config.schema.toml
       - README.md
       - LICENSE
