--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -33,8 +33,4 @@ checksum:
   algorithm: md5
 
 signs:
-  - cmd: gpg2
-
-    args: ["--output", "${signature}", "${artifact}", "{{ .ProjectName }}"]
-
-    artifacts: all
+  - artifacts: all
