--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,3 +31,32 @@ checksum:
   name_template: 'md5_checksums.txt'
 
   algorithm: md5
+
+dockers:
+  - id: amd64
+
+    goos: linux
+
+    goarch: amd64
+
+    goarm: ''
+
+    image_templates:
+    - "medzik/pingbot:latest"
+    - "medzik/pingbot:{{ .Tag }}"
+    - "medzik/pingbot:v{{ .Major }}"
+    - "medzik/pingbot:v{{ .Major }}.{{ .Minor }}"
+
+    dockerfile: Dockerfile
+
+    use: docker
+
+    build_flag_templates:
+    - "--pull"
+    - "--label=org.opencontainers.image.created={{ .Date }}"
+    - "--label=org.opencontainers.image.title={{ .ProjectName }}"
+    - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
+    - "--label=org.opencontainers.image.version={{ .Version }}"
+
+    extra_files:
+    - start.sh
