--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,8 +14,8 @@ builds:
 
     ldflags:
       - -s -w
-      - -X gitlab.com/MedzikUser/go/pingbot/config.Version={{.RawVersion}}
-      - -X gitlab.com/MedzikUser/go/pingbot/config.Build={{.Date}}
+      - -X github.com/medzikuser/go-pingbot/config.Version={{ .RawVersion }}
+      - -X github.com/medzikuser/go-pingbot/config.Build={{ .Date }}
 
 archives:
   - format: tar.xz
@@ -28,9 +28,9 @@ archives:
       - start.sh
 
 checksum:
-  name_template: 'md5_checksums.txt'
+  name_template: 'checksums.txt'
 
-  algorithm: md5
+  algorithm: sha256
 
 dockers:
   - id: amd64
@@ -42,21 +42,21 @@ dockers:
     goarm: ''
 
     image_templates:
-    - "medzik/pingbot:latest"
-    - "medzik/pingbot:{{ .Tag }}"
-    - "medzik/pingbot:v{{ .Major }}"
-    - "medzik/pingbot:v{{ .Major }}.{{ .Minor }}"
+      - "medzik/pingbot:latest"
+      - "medzik/pingbot:{{ .Tag }}"
+      - "medzik/pingbot:v{{ .Major }}"
+      - "medzik/pingbot:v{{ .Major }}.{{ .Minor }}"
 
     dockerfile: Dockerfile
 
     use: docker
 
     build_flag_templates:
-    - "--pull"
-    - "--label=org.opencontainers.image.created={{ .Date }}"
-    - "--label=org.opencontainers.image.title={{ .ProjectName }}"
-    - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
-    - "--label=org.opencontainers.image.version={{ .Version }}"
+      - "--pull"
+      - "--label=org.opencontainers.image.created={{ .Date }}"
+      - "--label=org.opencontainers.image.title={{ .ProjectName }}"
+      - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
+      - "--label=org.opencontainers.image.version={{ .Version }}"
 
     extra_files:
-    - start.sh
+      - start.sh
