--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Setup Git
         if: github.event_name != 'pull_request'
         run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          git config --local user.email "rm99iv9s@duck.com"
+          git config --local user.name "MedzikUserBot"
 
       - name: Tidy
         if: github.event_name != 'pull_request'
